force-app/main/default/objects/Lead/fields/AV_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>AV_Birthdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>