force-app/main/default/objects/Lead/fields/AV_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número identificación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>