force-app/main/default/objects/Lead/fields/AV_CustomerId_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomerId_AN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número de identificacion AN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>