force-app/main/default/objects/Lead/fields/AV_CustomerTypeAndIdF__c.field-meta.xml
<CustomField>
    <fullName>AV_CustomerTypeAndIdF__c</fullName>
    <formula>CASE(TEXT(AV_CustomerType__c),
&quot;1&quot;,&quot;DNI&quot;,
&quot;3&quot;, &quot;Tarjeta residencia&quot;,
&quot;4&quot;, &quot;Pasaporte&quot;,
null) + &apos;-&apos; + AV_CustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento identificación</label>
    <type>Text</type>
</CustomField>