force-app/main/default/objects/Lead/fields/AV_DueDateLead__c.field-meta.xml
<CustomField>
    <fullName>AV_DueDateLead__c</fullName>
    <description>Fecha límite para realizar el blanqueo de los datos.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha vencimiento Lead</label>
    <type>Date</type>
</CustomField>