force-app/main/default/objects/Lead/fields/AV_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id. Origen</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>