force-app/main/default/objects/Lead/fields/AV_FechaConversionCliente__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaConversionCliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha conversión cliente</label>
    <type>Date</type>
</CustomField>