force-app/main/default/objects/Lead/fields/AV_FirstName_AN__c.field-meta.xml
<CustomField>
    <fullName>AV_FirstName_AN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre AN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>