force-app/main/default/objects/Lead/fields/AV_numperso__c.field-meta.xml
<CustomField>
    <fullName>AV_numperso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ficha cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Ficha cliente)</relationshipLabel>
    <relationshipName>FichaCliente</relationshipName>
    <type>Lookup</type>
</CustomField>