force-app/main/default/objects/Lead/fields/AV_PhoneF__c.field-meta.xml
<CustomField>
    <fullName>AV_PhoneF__c</fullName>
    <formula>AV_PhonePrefix__c + &quot; &quot; +  MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>