force-app/main/default/objects/Lead/fields/AV_PhonePrefix__c.field-meta.xml
<CustomField>
    <fullName>AV_PhonePrefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prefijo teléfono</label>
    <length>3</length>
    <type>Text</type>
</CustomField>