force-app/main/default/objects/Lead/fields/AV_Requester__c.field-meta.xml
<CustomField>
    <fullName>AV_Requester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitante del lead</label>
    <type>Checkbox</type>
</CustomField>