force-app/main/default/objects/Lead/fields/EV_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>EV_CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id de la campaña relacionada</description>
    <label>CampaignId</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>