force-app/main/default/objects/Lead/fields/EV_Cargo__c.field-meta.xml
<CustomField>
    <fullName>EV_Cargo__c</fullName>
    <description>Cargo del interlocutor de empresa cuando no se encuentra la empresa en Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>