force-app/main/default/objects/Lead/fields/EV_FechadeEnvio__c.field-meta.xml
<CustomField>
    <fullName>EV_FechadeEnvio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Envio</label>
    <type>DateTime</type>
</CustomField>