force-app/main/default/objects/Lead/fields/EV_Gestor__c.field-meta.xml
<CustomField>
    <fullName>EV_Gestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gestor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>