force-app/main/default/objects/Lead/fields/EV_IdAsistenteAdobe__c.field-meta.xml
<CustomField>
    <fullName>EV_IdAsistenteAdobe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id Asistente Adobe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>