force-app/main/default/objects/Lead/fields/EV_NameCampaign__c.field-meta.xml
<CustomField>
    <fullName>EV_NameCampaign__c</fullName>
    <description>Nombre de la campaña</description>
    <formula>EV_CampaignId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameCampaign</label>
    <type>Text</type>
</CustomField>