force-app/main/default/objects/Lead/fields/EV_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>EV_NumPerso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>