force-app/main/default/objects/Lead/fields/EV_Provincia__c.field-meta.xml
<CustomField>
    <fullName>EV_Provincia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>