force-app/main/default/objects/Lead/fields/EV_Tipo_Informacion__c.field-meta.xml
<CustomField>
    <fullName>EV_Tipo_Informacion__c</fullName>
    <label>Tipo Informacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informe semanal</fullName>
            </value>
            <value>
                <fullName>Informe mensual</fullName>
            </value>
            <value>
                <fullName>Newsletter Accionistas CaixaBank</fullName>
            </value>
            <value>
                <fullName>Informe de gestion</fullName>
            </value>
            <value>
                <fullName>Aula</fullName>
            </value>
            <value>
                <fullName>Noticias corporativas</fullName>
            </value>
            <value>
                <fullName>Alestas SMS(remuneración al accionista, JGA, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>