force-app/main/default/objects/Lead/fields/EV_URLModificar__c.field-meta.xml
<CustomField>
    <fullName>EV_URLModificar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Modificar</label>
    <type>Url</type>
</CustomField>