force-app/main/default/objects/Lead/fields/unblusuite__Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>unblusuite__Conversation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>