force-app/main/default/objects/Lead/recordTypes/AV_PlataformasHipotecarias.recordType-meta.xml
<RecordType>
    <fullName>AV_PlataformasHipotecarias</fullName>
    <active>true</active>
    <businessProcess>Plataformas hipotecarias</businessProcess>
    <label>Plataformas hipotecarias</label>
</RecordType>