force-app/main/default/objects/Lead/recordTypes/EV_Evento.recordType-meta.xml
<RecordType>
    <fullName>EV_Evento</fullName>
    <active>true</active>
    <businessProcess>Eventos</businessProcess>
    <label>Evento</label>
</RecordType>