force-app/main/default/objects/Lead/recordTypes/EV_LeadAccionistas.recordType-meta.xml
<RecordType>
    <fullName>EV_LeadAccionistas</fullName>
    <active>true</active>
    <businessProcess>Eventos</businessProcess>
    <label>Lead Accionistas</label>
</RecordType>