force-app/main/default/objects/Lead/recordTypes/EV_LeadTechSummit.recordType-meta.xml
<RecordType>
    <fullName>EV_LeadTechSummit</fullName>
    <active>true</active>
    <businessProcess>Lead Tech Summit</businessProcess>
    <description>Registros de tipo TechSummit.</description>
    <label>Lead Tech Summit</label>
</RecordType>