force-app/main/default/objects/Lead/validationRules/AV_ModifyStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>AV_ModifyStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				NOT($Permission.AV_AvoidBulkApi),
				$Profile.Name = &apos;AV_Usuario_CaixaBank&apos;,
				ISCHANGED(Status),
				AV_ByPass_VR__c = false 
    )</errorConditionFormula>
    <errorMessage>No se puede modificar el estado del Lead</errorMessage>
</ValidationRule>