force-app/main/default/objects/Lead/validationRules/AV_RestrictModify_IsClient.validationRule-meta.xml
<ValidationRule>
    <fullName>AV_RestrictModify_IsClient</fullName>
    <active>true</active>
    <description>Restringir el campo Cliente CaixaBank para que solo pueda ser editado por Directores/Gerentes.</description>
    <errorConditionFormula>AND(
				NOT($Permission.AV_AvoidBulkApi),
				  ISCHANGED(AV_IsClient__c),
      NOT($Permission.AV_NowInDirectores),
				  $Profile.Name = &apos;AV_Usuario_CaixaBank&apos;
)</errorConditionFormula>
    <errorDisplayField>AV_IsClient__c</errorDisplayField>
    <errorMessage>Solo los Directores/Gerentes pueden modificar este campo.</errorMessage>
</ValidationRule>