force-app/main/default/objects/Lead/validationRules/EV_LongitudMobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_LongitudMobilePhone</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
NOT ISBLANK(MobilePhone), 
OR (
				LEN(MobilePhone) &lt; 8,
				LEN(MobilePhone) &gt; 23
				)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>La longitud del teléfono móvil debe ser mínimo de 8 dígitos y máximo de 23 (prefijo incluido)</errorMessage>
</ValidationRule>