force-app/main/default/objects/Lead/validationRules/EV_LongitudNIF_CIF.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_LongitudNIF_CIF</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
NOT ISBLANK(EV_Identificador__c), 
LEN(EV_Identificador__c) &lt;&gt; 9, 
LEN(EV_Identificador__c) &lt;&gt; 10 
)</errorConditionFormula>
    <errorDisplayField>EV_Identificador__c</errorDisplayField>
    <errorMessage>La longitud del número de documento debe ser de 9 (NIF/CIF/NIE) o 10 (pasaporte) caracteres.</errorMessage>
</ValidationRule>