force-app/main/default/objects/Lead/validationRules/EV_OnlyNumMobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_OnlyNumMobilePhone</fullName>
    <active>true</active>
    <description>Validation Rule para controlar que el móvil sea sólo con valores numéricos.</description>
    <errorConditionFormula>AND ( 
NOT ISBLANK(MobilePhone), 
NOT ISNUMBER(MobilePhone)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Sólo se aceptan valores numéricos para definir el teléfono móvil.</errorMessage>
</ValidationRule>